# downloader-lib

./: README.md  init-local-vapi.sh  init.sh  meson.build
.github/workflows/: ci.yml  release.yml
src/: downloader.vala  manager.vala  meson.build  result.vala
subprojects/: vala_testcases.wrap
tests/: example_test.vala  main.vala  meson.build
